# imas2xarray

./: .bumpversion.cfg  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt  requirements_full.txt
.github/workflows/: code-style.yml  publish.yaml  test.yaml
docs/: examples.md  genvariables.py  modify_data.md  plotting_example.md
docs/api/: index.md
docs/templates/: template_variables.md
notebooks/: prepare.py  prepare.sh  xarray-2D.ipynb  xarray-ions.ipynb  xarray.ipynb
scripts/: modify_data.py  plot_with_matplotlib.py  plot_with_matplotlib_multi.py
src/imas2xarray/: __init__.py  _io.py  _lookup.py  _models.py  _rebase.py  _utils.py
tests/: idsmapping_sample_data.py  test_mapping.py  test_mapping_to_xarray.py  test_rebase.py  test_to_imas.py  test_to_xarray.py  test_xarray_interface.py
